1.admin_inquire 검색 분기별로 나눠준뒤 ui 수정 2.admin_inquire_info 최종 ui 수정 3. admin_inquire 페이지 부분 최종완료
4.신고하기 페이지 신고한값을  admin_accuse 페이지에 목록으로 띄우기까지완료

--- a/src/main/webapp/resources/css/admin_inquire.css
+++ b/src/main/webapp/resources/css/admin_inquire.css
@@ -36,4 +36,12 @@
 .inq_adm_tr:hover{
 	background-color:aliceblue;
 }
-
+#search_field{
+	height:24.4px;	
+}
+#search_field_item{
+	height:24.4px;
+}
+#search_field_handling{
+	height:24.4px;
+}
