--- a/src/main/webapp/resources/css/my_info.css
+++ b/src/main/webapp/resources/css/my_info.css
@@ -225,7 +225,7 @@ body{
     width: 450px;
     height: 440px;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     margin-top: -220px;
     margin-left: -235px;
@@ -289,10 +289,32 @@ body{
     border: solid 1px #00c3bd;
     color: #00c3bd;
     font-size: 16px;
-    margin-top: 31px;
+    margin-top: 10px;
     background-color: white;
     margin-left: 156px;
     cursor: pointer;
 }
-
-
+.my_info_leave_text{
+	resize: none;
+	text-align: left;
+    border: solid 1px #dfdfdf;
+    background-color: #fbfbfb;
+    list-style: none;
+    outline: none;
+    margin-bottom: 20px;
+}
+.my_info_leave_text placeholder{
+	font-size: 12px;
+    color: #959595;
+    height: 27px;
+    line-height: 27px;
+}
+#my_info_check_error{
+	width: 200px;
+    height: 20px;
+    line-height: 20px;
+    /* margin-top: 10px; */
+    font-size: 12px;
+    /* padding-left: 50px; */
+    margin: 0 auto;
+}
