프로필 페이지 신고버튼에 1값 추가 글목록 조건 수정 키워드 갯수 제한 6개로 변경 프로필 수정 작가 포트폴리오 버튼에 글씨 추가 read 페이지 및 index페이지 경로 수정

--- a/src/main/webapp/resources/css/profile.css
+++ b/src/main/webapp/resources/css/profile.css
@@ -641,6 +641,11 @@ span.del_btn {
     border-radius: 50%;
     border: 1px solid #eee;
 }
+.folio_font{
+	text-align: center;
+    font-weight: 500;
+    color: rgba(0, 0, 0, 0.48);
+}
 #flio_b{
     float: right;
     outline: none;
