<작가신청> 1. 관리자 페이지 다중 파일 다운로드 구현 완료 2. 관리자 페이지 승인/반려 기능 구현 완료 3. 작가신청, 관리자페이지에서 심사 기능 유효성 검증 일부 구현

--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -328,7 +328,8 @@ a:hover{text-decoration:underline; color:#F57C68;}
 }
 
 #cont_button_wrap {
-	margin:10px 0;
+	width:800px;
+	margin:10px auto;
 	display:flex;
 	justify-content:flex-end;
 }
@@ -469,4 +470,30 @@ a:hover{text-decoration:underline; color:#F57C68;}
 
 #search_name {
 	margin: 0 7px;
+}
+
+/* admin_author_info 작가신청 열람 */
+.author_td {
+	padding:5px;
+}
+
+.author_td a{
+	margin:5px 0;
+}
+
+.author_cont_td	{
+	padding: 5px;
+    height: 300px;
+    vertical-align: baseline;
+}
+
+.down_file {
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: blue;
+    text-decoration: underline;
+    margin: 5px 0;
+    padding: 0;
+    outline: none;
 }
