--- a/src/main/webapp/resources/css/pass_modify.css
+++ b/src/main/webapp/resources/css/pass_modify.css
@@ -1,20 +1,27 @@
 @charset "UTF-8";
-
+html{
+	margin: 0px;
+	padding: 0px;
+}
 body{
 	margin: 0px;
 	padding: 0px;
 }
 #pass_modify_main_wrap{
-	    padding: calc((100vh - 681px) / 1) 0;
-    background-image: url(../img/background_img/login_page.png);
+    background-image: url(../img/background_img/background_on.png);
     background-size: cover;
+    width: 100%;
+    height: 78.4vh;
+	display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #pass_modify_main_div{
     background-color: white;
-    width: 320px;
+    width: 310px;
     margin: 0px auto;
-    height: 450px;
     text-align: center;
+ 
 	
 }
 #pass_modify_sub_div{
