검색페이지 1. 검색 분기나눔 (검색목차,하위분기,검색어) - 검색 페이지내에서 버튼,Select마다 서로다른 분기문값을 가진 페이지 리로드(새로고침) - UI 수정 필요!! (EX) 검색 결과 없을때 보여줄 글이나 이미지 같은것) - 아직 검색내용에 형광처리 기능 구현 못함... 2. 책검색, 작가검색 구현 완료 (책검색은 아직 미완성) - 글검색에서 작가명검색이 안되고있음.. 도움!!
글읽기 페이지
1. 상단에 비공개 공개 처리 변경가능한 버튼 생성 완료
- 아직 기능은 구현 못함

세부 변경사항
- 메인페이지에 이미지없는 공감글에 로고 넣어주는 기능 추가
- 메뉴페이지에서 이미지없는 BEST글 로고 넣어준느 기능 추가
- 메뉴페이지에서 공지사항에 more 버튼 생성
- 최신글 title 영문으로 변경

--- a/src/main/webapp/resources/css/new_post.css
+++ b/src/main/webapp/resources/css/new_post.css
@@ -10,9 +10,10 @@ ul li {
 }
 
 #new_post_title {
-	font-family: "NanumPen", "serif";
-	font-size: 60px;
+	font-family: 'NanumMyeongjo','serif';
+	font-size: 45px;
 	text-align: center;
+	font-weight: bold;
 	border-bottom: 1px solid #ededed;
 }
 
