회원정보수정 카테고리 수정 완료

--- a/src/main/webapp/resources/css/find_id.css
+++ b/src/main/webapp/resources/css/find_id.css
@@ -205,7 +205,7 @@ display: inline-block;
 }
 
 #hidde_box{
-	/* visibility: hidden; */
+ visibility: hidden;
 }
 #find_pass_pass_modify{
 	width: 223px;
