--- a/src/main/webapp/resources/css/my_info.css
+++ b/src/main/webapp/resources/css/my_info.css
@@ -283,11 +283,11 @@ body{
 	text-align: center;
 }
 #my_info_layerLeave .my_info_confirm_btn{
-	width: 130px;
+    width: 130px;
     height: 40px;
-    border-radius: 22px;
-    border: solid 1px #00c3bd;
-    color: #00c3bd;
+    /* border-radius: 22px; */
+    border: solid 2px orange;
+    color: black;
     font-size: 16px;
     margin-top: 10px;
     background-color: white;
@@ -296,25 +296,24 @@ body{
 }
 .my_info_leave_text{
 	resize: none;
-	text-align: left;
+    text-align: left;
     border: solid 1px #dfdfdf;
     background-color: #fbfbfb;
     list-style: none;
     outline: none;
     margin-bottom: 20px;
+    padding: 20px;
+    width: 410px;
 }
-.my_info_leave_text placeholder{
-	font-size: 12px;
-    color: #959595;
-    height: 27px;
-    line-height: 27px;
-}
+
 #my_info_check_error{
 	width: 200px;
     height: 20px;
     line-height: 20px;
-    /* margin-top: 10px; */
+    margin-top: 10px;
     font-size: 12px;
     /* padding-left: 50px; */
     margin: 0 auto;
+    color: red;
+    
 }
