--- a/src/main/webapp/resources/css/member_modify.css
+++ b/src/main/webapp/resources/css/member_modify.css
@@ -7,7 +7,6 @@
 #member_modify_main_div {
 	background-color: white;
 	width: 777px;
-	height: 700px;
 	margin: 0 auto;
 }
 
@@ -24,8 +23,7 @@
 }
 
 #member_modify_sub_div{
-	height: 450px;
-	width: 600px;	
+	display:inline;
 	margin-left: 60px;
 }
 
@@ -40,6 +38,37 @@
 #member_modify_table td{
 	padding-left: 68px;	
 }
+
+#member_pwd_modify{
+	    width: 43px;
+    height: 25px;
+    background-color: white;
+    border: solid 2px orange;
+    outline: 0;
+    cursor: pointer;
+    margin-bottom: 5px;
+    font-size: 10px;
+}
+#member_pwd_modify:active{
+	background-color: orange;
+	color: white;
+}
+.hide_box{
+	visibility: hidden;	
+}
+#member_modify_pwd_modify{
+	border:2px solid orange;
+	background-color: orange;
+	cursor: pointer;
+	padding: 0;
+	outline: 0;
+	
+	
+}
+#member_modify_pwd_modify:active{
+	background-color: orange;
+	color: white;
+}
 .member_modify_text { /* 인풋박스 설정 */
 	width: 270px;
 	height: 15px;
@@ -52,7 +81,9 @@
 	padding-bottom:5px;
 	border-bottom:1px solid orange;
 }
-
+.member_modify_text.pwd_check{
+	width: 223px;
+}
 .member_modify_text.birth{
 	width: 63px;
 	height: 15px;
@@ -82,18 +113,20 @@
 }
 	
 .member_modify_text.email{
-	width: 98px;
+	width: 106px;
 	height: 15px;
 	outline: 0;
 	border-left: none;
 	border-right: none;
 	border-top: none;
 	text-align: left;
-	padding:0 10px;
 	border-bottom:1px solid orange;
 	padding-bottom:5px;
 	font-size : 14px;
 	font-family: verdana;
+}
+.member_modify_text.domain{
+	width: 93px;
 }
 .member_modify_text.emailcheck{
 	width: 240px;
@@ -103,7 +136,6 @@
 	border-right: none;
 	border-top: none;
 	text-align: left;
-	padding:0 10px;
 	border-bottom:1px solid orange;
 	padding-bottom:5px;
 	font-size : 14px;
@@ -129,37 +161,37 @@
 }
 
 #member_modify_certified_btn {
-	width: 25px;
-	height: 25px;
-	background-color: lightblack;
-	border: solid 2px lightblack;
-	outline: 0;
-	border-radius: 100%;
-	cursor: pointer;
-	margin-left:5px;
-	margin-bottom: 5px;
+    width: 41px;
+    height: 25px;
+    background-color: white;
+    border: solid 2px orange;
+    outline: 0;
+    cursor: pointer;
+    margin-bottom: 5px;
+    font-size: 10px;
 }
-
+#member_modify_certified_btn:hover{
+	background-color: orange;
+	color: white;
+}
 #member_modify_emailcheck_div{
 	display: inline;
 }
 
 
 #member_modify_emailcheck_btn{
-	width: 25px;
-	height: 25px;
-	background-color: lightblack;
-	border: solid 2px lightblack;
-	outline: 0;
-	border-radius: 100%;
-	cursor: pointer;
-	margin-left:5px;
-	margin-bottom: 5px;
+    width: 41px;
+    height: 25px;
+    background-color: white;
+    border: solid 2px orange;
+    outline: 0;
+    cursor: pointer;
+    margin-bottom: 5px;
+    font-size: 10px;
 }
 
 #member_modify_next_btn_div{
 	border-top: 1px solid gray;
-	margin-top: 50px;
 	text-align: right;
 }
 
@@ -168,14 +200,19 @@
 }
 
 #member_modify_next_btn {
-	border: solid 1px gray;
-	width: 100px;
-	height: 30px;
-	background-color: white;
-	cursor: pointer;
-	outline: 0;
+    width: 110px;
+    height: 40px;
+    background-color: white;
+    border: solid 2px orange;
+    outline: 0;
+    cursor: pointer;
+    margin-bottom: 30px;
+    font-size: 10px;
 }
-
+#member_modify_next_btn:hover{
+	background-color: orange;
+	color: white;
+}
 .member_modify_error {
 	width: 200px;
 	height: 15px;
