게시글 수정 로직 완성 - 기존 글쓰기 폼에서 color값과 file값이 Null일경우 Mybatis XML 파일에서 if 조건 분기로 업데이트 - 세션이 없을시(비로그인 or 세션만료) 로그인 화면으로 이동 jamong_edit 페이지 구성

--- a/src/main/webapp/resources/css/write.css
+++ b/src/main/webapp/resources/css/write.css
@@ -305,6 +305,7 @@ button.write_icon_btn,button.write_font_dropdown_btn{ /* ward */
 	outline:0px;
 	width:100%;
 	z-index:1;
+	filter:brightness(0.7);
 	transition: height,opacity,200ms;
 	-webkit-transition: height,opacity,200ms;
 }
