--- a/src/main/webapp/resources/css/search_result.css
+++ b/src/main/webapp/resources/css/search_result.css
@@ -132,16 +132,21 @@ ul li {
 }
 
 #search_result_post_main .post_cont {
+	display: flex;
 	width: 800px;
 	height: 210px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 10px;
 	margin-bottom: 10px;
-	border-top: 2px solid #c0c0c0;
+	border-top: 1px solid #c0c0c0;
 }
 
-#post_img {
+.post_img_wrap{
+	margin-top: 25px;
+}
+
+.post_img {
 	width: 200px;
 	height: 170px;
 	object-fit: cover;
@@ -155,27 +160,40 @@ ul li {
 	padding: 25px;
 }
 
+#post_text.post_no_img_text{
+	width: 730px;
+}
+
 #post_title {
+	font-family: 'NanumMyeongjo','serif';
 	font-weight: bold;
-	font-size: 25px;
-	width: 450px;
+	font-size: 20px;
 	text-align: left;
+	margin-bottom: 10px;
 }
 
 #post_cont {
 	width: 500px;
-	height: 85px;
 	padding: 4px;
-	line-height: 22px;
 	margin: 0;
-	font-size: 18px;
+	font-size: 15px;
 	overflow: hidden;
-	white-space: normal;
-	word-spacing: break-word;
-	text-overflow: elipsis;
+	white-space: normal;	 
+	word-wrap: break-word;	
+	text-overflow: ellipsis;
+	display: -webkit-box; 
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
+	height: 75px;
+	line-height: 25px;
+	margin-bottom:10px;
 }
 
-#post_writer {
+#post_cont.post_no_img_cont{
+	width: 730px;
+}
+
+.post_writer {
 	font-size: 18px;
 	text-align: right;
 	padding: 2px;
@@ -183,18 +201,26 @@ ul li {
 	color:#ff8040;
 }
 
-#post_writer i{
+.post_writer i{
 	font-family: "NanumPen", "serif";
 }
 
-#post_tag {
-	display:inline-block;
-	font-size: 12px;
+.post_tag {
+	font-size: 14px;
 	text-align: right;
 	padding: 2px;
 }
 
-#post_ago {
+.post_tag a{
+	margin-left:6px;
+}
+
+.post_tag a:hover{
+	text-decoration: underline;
+}
+
+
+.post_ago {
 	display:inline-block;
 }
 /* '글' 검색 결과 */
@@ -331,7 +357,6 @@ ul li {
 	height: auto;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 130px;
 }
 
 #search_result_author_main .author_cont {
@@ -343,55 +368,67 @@ ul li {
 	margin-bottom: 10px;
 }
 
-#search_result_author_profile {
-	width: 410px;
-	height: 150px;
-	border: 1px solid orange;
-	display: inline-block;
-	border: 1px solid orange;
-	display: inline-block;
+#search_author_list{
+	display:flex;
+	flex-wrap: wrap;
+	margin:0;
+	padding:0;
+}
+#search_author_list li{
 	margin: 17px;
 }
 
-#search_result_author_profile_img {
+#search_author_list li a{
+	display: inline-block;
+}
+
+.search_result_author_profile {
+	width: 410px;
+	height: 150px;
+	border: 1px solid orange;
+	display: flex;
+}
+
+.search_result_author_profile_img {
 	object-fit: cover;
-	width: 110px;
-	height: 110px;
+	width: 100px;
+    height: 100px;
 	border-radius: 100%;
 	display: inline-block;
-	padding: 4px;
-	margin-bottom: 10px;
+	padding: 15px;
 }
 
-#search_result_author_profile_info {
-	display: inline-block;
-	width: 270px;
-	height: 100px;
-	padding: 4px;
+.search_result_author_profile_info {
+	width: 255px;
+    padding: 15px;
 }
 
-#search_result_author_name {
-	padding: 4px;
-	font-size: 20px;
+.search_result_author_name {
+	font-family: 'NanumMyeongjo','serif';
+    font-size: 20px;
+    font-weight: bold;
 }
 
-#search_result_author_introduce {
+.search_result_author_introduce {
 	font-size: 14px;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	width: 260px;
-	height: 80px;
-	padding: 4px;
-	line-height: 20px;
-	-webkit-line-clamp: 4;
-	-webkit-box-orient: vertical;
-	word-wrap: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    height: 60px;
+    line-height: 20px;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    word-wrap: break-word;
+    margin-top: 5px;
 }
 
-#search_result_author_tag {
-	font-size: 14px;
-	margin: 4px 4px 4px 150px;
-	padding: 4px;
+.search_result_author_tag {
+	display:flex;
+	flex-wrap: wrap;
+    font-size: 12px;
+}
+
+.search_result_author_tag span{
+	margin-right: 10px;
 }
 /* '작가' 검색 결과 */
